2008-10-22  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.DesignerSupport.mdp: Updated.

	* MonoDevelop.DesignerSupport/CodeBehind.cs: Moved designer/codebehind
	lookup from MonoDevelop.AspNet.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport/BindingService.cs: Null checks in case
	event's ReturnType is null or unresolvable.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Remove lock, and add a
	GUI thread assertion so we can find the rogue thread that's causing
	Bug 434065.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Added lock for
	refresh.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport/DesignerSupportService.cs: Use a simple
	  lazy singleton instead of an IService.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs: Add
	  support for using property grid to set arbitrary build actions.

2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: Track
	  API, fix .ctor display formatting.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs:
	  Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs: Track api changes.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs:
	  Changed compilation unit/document meta information interface.
