@@ -59,7 +59,7 @@ namespace MonoDevelop.DesignerSupport.Toolbox
 		
 		public ComponentSelectorDialog (IToolboxConsumer currentConsumer)
 		{
-			using (IProgressMonitor monitor = new MessageDialogProgressMonitor (true, false, false, true)) {
+			using (IProgressMonitor monitor = new MessageDialogProgressMonitor (true, true, false, true)) {
 				index = DesignerSupport.Service.ToolboxService.GetComponentIndex (monitor);
 			}
 			
