@@ -1,3 +1,10 @@
+2008-11-02  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.DesignerSupport/ToolboxService.cs:
+	* MonoDevelop.DesignerSupport.Toolbox/ComponentSelectorDialog.cs: Fix
+	bug #430494 - When adding components, there is no way to stop the
+	process.
+
 2008-10-22  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Makefile.am:
